2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 6:1:4.

2003-12-05  Bruno Haible  <bruno@clisp.org>

	* localename.c (_nl_locale_name): Change result for Latin Uzbek locale
	to match the glibc name.

2003-12-02  Bruno Haible  <bruno@clisp.org>

	* localename.c (LANG_AMHARIC, LANG_BURMESE, LANG_CAMBODIAN,
	LANG_CHEROKEE, LANG_EDO, LANG_FRISIAN, LANG_FULFULDE, LANG_GUARANI,
	LANG_HAUSA, LANG_HAWAIIAN, LANG_IBIBIO, LANG_IGBO, LANG_INUKTITUT,
	LANG_KANURI, LANG_LAO, LANG_LATIN, LANG_OROMO, LANG_PAPIAMENTU,
	LANG_PASHTO, LANG_SINHALESE, LANG_SOMALI, LANG_TAGALOG, LANG_TAJIK,
	LANG_TAMAZIGHT, LANG_TIBETAN, LANG_TIGRINYA, LANG_TURKMEN, LANG_YI,
	LANG_YIDDISH, LANG_YORUBA): New macros.
	(LANG_GAELIC, LANG_MALTESE, LANG_RHAETO_ROMANCE, LANG_SAAMI, LANG_SUTU,
	LANG_TSONGA, LANG_TSWANA, LANG_VENDA, LANG_WELSH, LANG_XHOSA,
	LANG_ZULU): New macros, consistent with those found in Wine.
	(SUBLANG_BENGALI_INDIA, SUBLANG_BENGALI_BANGLADESH,
	SUBLANG_ENGLISH_INDONESIA, SUBLANG_ENGLISH_HONGKONG,
	SUBLANG_ENGLISH_INDIA, SUBLANG_ENGLISH_MALAYSIA,
	SUBLANG_ENGLISH_SINGAPORE, SUBLANG_FRENCH_WESTINDIES,
	SUBLANG_FRENCH_REUNION, SUBLANG_FRENCH_CONGO, SUBLANG_FRENCH_SENEGAL,
	SUBLANG_FRENCH_CAMEROON, SUBLANG_FRENCH_COTEDIVOIRE,
	SUBLANG_FRENCH_MALI, SUBLANG_FRENCH_MOROCCO, SUBLANG_FRENCH_HAITI,
	SUBLANG_PUNJABI_INDIA, SUBLANG_PUNJABI_PAKISTAN,
	SUBLANG_ROMANIAN_ROMANIA, SUBLANG_ROMANIAN_MOLDOVA,
	SUBLANG_SINDHI_INDIA, SUBLANG_SINDHI_PAKISTAN,
	SUBLANG_TAMAZIGHT_ARABIC, SUBLANG_TAMAZIGHT_LATIN,
	SUBLANG_TIGRINYA_ETHIOPIA, SUBLANG_TIGRINYA_ERITREA): New macros.
	(_nl_locale_name) [WIN32]: Use them. Improve handling of Bengali,
	Serbian, English, French, Punjabi, Romanian, Sindhi, Tamazight,
	Tigrinya.

2003-12-02  Bruno Haible  <bruno@clisp.org>

	* config.charset: Treat the new country name CS like the old country
	name YU.
