@@ -1,3 +1,9 @@
+2004-01-08  Bruno Haible  <bruno@clisp.org>
+
+	* loadmsgcat.c (_nl_load_domain): When a string pair uses a system
+	dependent segment not known to this version of the library, ignore
+	the string pair instead of crashing.
+
 2003-12-17  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.13.1 released.
